// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserToggle should render correctly as org admin 1`] = `
<div>
  <div
    aria-label="Overflow actions"
    class="pf-c-dropdown pf-m-align-right pf-m-full-height chr-c-dropdown-user-toggle"
    data-ouia-component-id="chrome-user-menu"
    data-ouia-component-type="PF4/Dropdown"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="pf-c-dropdown__toggle data-hj-suppress sentry-mask"
      data-ouia-component-id="OUIA-Generated-DropdownToggle-2"
      data-ouia-component-type="PF4/DropdownToggle"
      data-ouia-safe="true"
      id="UserMenu"
      type="button"
      widget-type="UserMenu"
    >
      <span
        class="pf-c-dropdown__toggle-image"
      >
        &lt;UserIcon /&gt;
      </span>
      <span
        class="pf-c-dropdown__toggle-text"
      >
        someFirstName someLastName
      </span>
      <span
        class="pf-c-dropdown__toggle-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`UserToggle should render correctly with isSmall false 1`] = `
<div>
  <div
    aria-label="Overflow actions"
    class="pf-c-dropdown pf-m-align-right pf-m-full-height chr-c-dropdown-user-toggle"
    data-ouia-component-id="chrome-user-menu"
    data-ouia-component-type="PF4/Dropdown"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="pf-c-dropdown__toggle data-hj-suppress sentry-mask"
      data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
      data-ouia-component-type="PF4/DropdownToggle"
      data-ouia-safe="true"
      id="UserMenu"
      type="button"
      widget-type="UserMenu"
    >
      <span
        class="pf-c-dropdown__toggle-image"
      >
        &lt;UserIcon /&gt;
      </span>
      <span
        class="pf-c-dropdown__toggle-text"
      >
        someFirstName someLastName
      </span>
      <span
        class="pf-c-dropdown__toggle-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`UserToggle should render correctly with isSmall true 1`] = `
<div>
  <div
    aria-label="Overflow actions"
    class="pf-c-dropdown pf-m-align-right pf-m-full-height chr-c-dropdown-user-toggle"
    data-ouia-component-id="chrome-user-menu"
    data-ouia-component-type="PF4/Dropdown"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Actions"
      class="pf-c-dropdown__toggle data-hj-suppress sentry-mask"
      id="pf-dropdown-toggle-id-0"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 192 512"
        width="1em"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
  </div>
</div>
`;
